--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -6910,11 +6910,26 @@ a, .text-link {
 .v-option-menu {
   padding: 0;
   margin-top: 4px;
-  margin-bottom: 0;
+  margin-bottom: 4px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   background-color: #FFF;
   border-radius: 4px;
   list-style: none; }
+  .v-option-menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+
+.v-option-group__title {
+  margin: 0;
+  padding-left: 8px;
+  padding-right: 8px;
+  line-height: 30px;
+  color: #8c8c8c;
+  cursor: default; }
+
+.v-option-group .v-option-item {
+  padding-left: 16px; }
 
 .v-option-item {
   padding-left: 8px;
