--- a/src/components/style/select/index.scss
+++ b/src/components/style/select/index.scss
@@ -212,12 +212,35 @@
 .#{$ui-prefix}-option-menu {
   padding: 0;
   margin-top: 4px;
-  margin-bottom: 0;
+  margin-bottom: 4px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
   background-color: #FFF;
   border-radius:  4px;
   list-style: none;
+
+  ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
 }
+
+.#{$ui-prefix}-option-group{
+  &__title {
+    margin: 0;
+    padding-left: 8px;
+    padding-right: 8px;
+    line-height: 30px;
+    color: $help-color;
+    cursor: default;
+  }
+
+  .#{$ui-prefix}-option-item {
+    padding-left: 16px;
+  }
+}
+
+
 
 .#{$ui-prefix}-option-item{
   padding-left: 8px;
