--- a/src/components/style/select/index.scss
+++ b/src/components/style/select/index.scss
@@ -11,11 +11,6 @@
     .#{$ui-prefix}-select-input {
       min-height: 32px;
       line-height: 32px;
-
-      &__placeholder,
-      &__search {
-        min-height: 32px;
-      }
     }
   }
 
@@ -23,11 +18,6 @@
     .#{$ui-prefix}-select-input {
       min-height: 24px;
       line-height: 24px;
-
-      &__placeholder,
-      &__search  {
-        min-height: 24px;
-      }
     }
   }
 }
@@ -77,7 +67,7 @@
   }
 
   &__placeholder{
-    min-height: 28px;
+    display: inline-block;
     color: #DDD;
   }
 
