修改下拉框placement

--- a/src/components/style/dropdown/index.scss
+++ b/src/components/style/dropdown/index.scss
@@ -33,6 +33,7 @@
   border-radius: 4px;
   border: 1px solid #EFEFEF;
   background-color: #FFFFFF;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, .1);
   list-style: none;
 }
 
