--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -4876,6 +4876,7 @@ a, .text-link {
   border-radius: 4px;
   border: 1px solid #EFEFEF;
   background-color: #FFFFFF;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
   list-style: none; }
 
 .v-dropdown-item {
