--- a/src/components/style/breadcrumb/index.scss
+++ b/src/components/style/breadcrumb/index.scss
@@ -1,7 +1,20 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
 
 .#{$ui-prefix}-breadcrumb {
+  font-size: $font-size-base;
+  font-family: $font-family;
+  a{
+    color: $link-color;
+    text-decoration: none;
+
+    &:hover{
+      color: $link-hover-color;
+    }
+    &:visited{
+      color: $link-active-color;
+    }
+  }
   .#{$ui-prefix}-breadcrumb-item:last-child {
     font-weight: bold;
   }
