--- a/src/components/style/button/index.scss
+++ b/src/components/style/button/index.scss
@@ -1,11 +1,9 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
 @import "mixin";
 
 .#{$ui-prefix}-btn {
   padding: $btn-padding-base;
-  margin-right: 6px;
-  margin-bottom: 10px;
   line-height: $line-height-base;
   color: $text-color;
   font-size: $font-size-base;
