--- a/src/components/style/checkbox/index.scss
+++ b/src/components/style/checkbox/index.scss
@@ -1,10 +1,12 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
+
 .#{$ui-prefix}-checkbox {
   display: inline-block;
+  font-size: $font-size-base;
+  font-family: $font-family;
+  line-height: 1;
   cursor: pointer;
-  margin-right: 8px;
-  margin-bottom: 12px;
 
   &:hover{
     .#{$ui-prefix}-checkbox-input{
@@ -17,9 +19,8 @@
   display: inline-block;
   height: 14px;
   width: 14px;
-  line-height: 14px;
   text-align: center;
-  vertical-align: bottom;
+  vertical-align: text-bottom;
   border: 1px solid $color-default;
   border-radius: 2px;
 
@@ -32,8 +33,8 @@
     position: relative;
     &:after {
       position: absolute;
-      left: 3px;
-      top: 2px;
+      left: 4px;
+      top: 3px;
       content: " ";
       display: block;
       height: 4px;
@@ -48,7 +49,9 @@
 }
 
 .#{$ui-prefix}-checkbox-label {
+  display: inline-block;
   padding-left: 2px;
+  line-height: 16px;
 }
 
 .#{$ui-prefix}-checkbox.checked {
