--- a/src/components/style/dropdown/index.scss
+++ b/src/components/style/dropdown/index.scss
@@ -1,13 +1,12 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
 @import "mixin";
 
 .#{$ui-prefix}-dropdown{
   display: inline-block;
-  margin-right: 5px;
-  margin-bottom: 5px;
+  font-family: $font-family;
+  font-size: $font-size-base;
   cursor: pointer;
-  overflow: visible;
 }
 
 .#{$ui-prefix}-dropdown-rel{
