--- a/src/components/style/message/index.scss
+++ b/src/components/style/message/index.scss
@@ -1,5 +1,5 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
 
 .#{$ui-prefix}-message-root {
   position: fixed;
@@ -8,8 +8,9 @@
   left: 0;
   right: 0;
   z-index: -1;
-
   text-align: center;
+  font-family: $font-family;
+  font-size: $font-size-base;
 }
 
 .#{$ui-prefix}-message-box {
