--- a/src/components/style/notification/index.scss
+++ b/src/components/style/notification/index.scss
@@ -1,5 +1,5 @@
 @import "../themes/default";
-@import "../core/index";
+@import "../common/index";
 
 .#{$ui-prefix}-notification-root {
   position: fixed;
@@ -10,6 +10,8 @@
   width: 335px;
   padding-right: 16px;
   padding-left:  16px;
+  font-family: $font-family;
+  font-size: $font-size-base;
 }
 
 .#{$ui-prefix}-notification-box {
