--- a/src/components/style/radio/index.scss
+++ b/src/components/style/radio/index.scss
@@ -1,11 +1,13 @@
-@import '../themes/default.scss';
-@import '../core/index.scss';
+@import "../themes/default";
+@import "../common/index";
 
 .#{$ui-prefix}-radio{
   display: inline-block;
-  cursor: pointer;
   margin-right: 8px;
   margin-bottom: 12px;
+  font-family: $font-family;
+  font-size: $font-size-base;
+  cursor: pointer;
 
   &:hover {
     .#{$ui-prefix}-radio-input{
@@ -20,8 +22,8 @@
   display: inline-block;
   height: 14px;
   width: 14px;
-  vertical-align: bottom;
-  border-radius: 7px;
+  vertical-align: text-bottom;
+  border-radius: 14px;
   border: 1px solid $color-default;
 
   transition: all 200ms;
@@ -40,7 +42,7 @@
     margin-left: -3px;
     margin-top:  -3px;
 
-    border-radius: 4px;
+    border-radius: 6px;
     background-color: #FFF;
     transform: scale(0);
     transition: all 200ms;
@@ -49,6 +51,7 @@
 
 .#{$ui-prefix}-radio-label{
   padding-left: 2px;
+  line-height: 16px;
 }
 
 .#{$ui-prefix}-radio.checked{
