--- a/src/components/style/themes/default.scss
+++ b/src/components/style/themes/default.scss
@@ -12,6 +12,7 @@ $color-default          :#D9D9D9 !default;
 
 // Fonts
 $font-family            : "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", 'SimSun', sans-serif !default;
+$font-size-sm           : 10px !default;
 $font-size-base         : 12px !default;
 $font-size-lg           : 14px !default;
 $line-height-base       : 1.5 !default;
