--- a/src/components/style/dropdown/index.scss
+++ b/src/components/style/dropdown/index.scss
@@ -27,12 +27,11 @@
 
 .#{$ui-prefix}-dropdown-menu{
   padding: 0;
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin: 0;
+  padding-top: 4px;
+  padding-bottom: 4px;
   border-radius: 4px;
-  border: 1px solid #EFEFEF;
   background-color: #FFFFFF;
-  box-shadow: 0 0 2px 1px rgba(0, 0, 0, .1);
   list-style: none;
 }
 
