--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -3287,6 +3287,94 @@
 
 .v-alert-content {
   display: inline-block; }
+.v-modal {
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "SimSun", sans-serif;
+  font-size: 12px; }
+  .v-modal__mask {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1000; }
+  .v-modal__container {
+    position: fixed;
+    left: 0;
+    width: 100%;
+    z-index: 1001; }
+  .v-modal.vertical-center .v-modal__container {
+    display: flex;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center; }
+
+.v-modal-box {
+  position: relative;
+  width: 460px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #FFF;
+  border-radius: 4px; }
+  .v-modal-box .close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-size: 12px;
+    color: #999;
+    cursor: pointer; }
+    .v-modal-box .close .icon {
+      font-size: 12px; }
+    .v-modal-box .close:hover {
+      color: #333; }
+
+.v-modal-head {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-bottom: 1px solid #e9eaec; }
+  .v-modal-head__default h3 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 14px; }
+
+.v-modal-body {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px; }
+
+.v-modal-footer {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-top: 1px solid #e9eaec; }
+  .v-modal-footer__default {
+    text-align: right; }
+
+.v-fast-modal-header {
+  line-height: 20px; }
+  .v-fast-modal-header .v-icon {
+    font-size: 16px;
+    vertical-align: middle; }
+  .v-fast-modal-header .icon__info {
+    color: #108ee9; }
+  .v-fast-modal-header .icon__warn {
+    color: #f56a00; }
+  .v-fast-modal-header .icon__error {
+    color: #f04134; }
+  .v-fast-modal-header .icon__success {
+    color: #00a854; }
+  .v-fast-modal-header .icon__confirm {
+    color: #ffbf00; }
+
+.v-fast-modal-footer {
+  text-align: right; }
 .v-notification-root {
   position: fixed;
   top: 24px;
