--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -3502,3 +3502,85 @@
     transform: translateY(-100%); }
   to {
     transform: translateY(0); } }
+.v-tooltip {
+  display: inline-block;
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "SimSun", sans-serif;
+  font-size: 12px; }
+  .v-tooltip-wrapper {
+    cursor: pointer; }
+  .v-tooltip-content {
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 4px;
+    color: #fff;
+    background-color: rgba(70, 76, 91, 0.9); }
+  .v-tooltip .v-popper.top, .v-tooltip .v-popper.top-start, .v-tooltip .v-popper.top-end {
+    padding-bottom: 6px; }
+    .v-tooltip .v-popper.top .v-popper__arrow, .v-tooltip .v-popper.top-start .v-popper__arrow, .v-tooltip .v-popper.top-end .v-popper__arrow {
+      border-bottom: none;
+      border-top: 6px solid rgba(70, 76, 91, 0.9);
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent; }
+  .v-tooltip .v-popper.top .v-popper__arrow {
+    bottom: 0;
+    left: 50%;
+    margin-left: -6px; }
+  .v-tooltip .v-popper.top-start .v-popper__arrow {
+    bottom: 0;
+    left: 6px; }
+  .v-tooltip .v-popper.top-end .v-popper__arrow {
+    bottom: 0;
+    right: 6px; }
+  .v-tooltip .v-popper.bottom, .v-tooltip .v-popper.bottom-start, .v-tooltip .v-popper.bottom-end {
+    padding-top: 6px; }
+    .v-tooltip .v-popper.bottom .v-popper__arrow, .v-tooltip .v-popper.bottom-start .v-popper__arrow, .v-tooltip .v-popper.bottom-end .v-popper__arrow {
+      border-top: none;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid rgba(70, 76, 91, 0.9); }
+  .v-tooltip .v-popper.bottom .v-popper__arrow {
+    top: 0;
+    left: 50%;
+    margin-left: -6px; }
+  .v-tooltip .v-popper.bottom-start .v-popper__arrow {
+    top: 0;
+    left: 6px; }
+  .v-tooltip .v-popper.bottom-end .v-popper__arrow {
+    top: 0;
+    right: 6px; }
+  .v-tooltip .v-popper.left, .v-tooltip .v-popper.left-start, .v-tooltip .v-popper.left-end {
+    padding-right: 6px; }
+    .v-tooltip .v-popper.left .v-popper__arrow, .v-tooltip .v-popper.left-start .v-popper__arrow, .v-tooltip .v-popper.left-end .v-popper__arrow {
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-left: 6px solid rgba(70, 76, 91, 0.9);
+      border-right: none; }
+  .v-tooltip .v-popper.left .v-popper__arrow {
+    right: 0;
+    top: 50%;
+    margin-top: -6px; }
+  .v-tooltip .v-popper.left-start .v-popper__arrow {
+    right: 0;
+    top: 6px; }
+  .v-tooltip .v-popper.left-end .v-popper__arrow {
+    right: 0;
+    bottom: 6px; }
+  .v-tooltip .v-popper.right, .v-tooltip .v-popper.right-start, .v-tooltip .v-popper.right-end {
+    padding-left: 6px; }
+    .v-tooltip .v-popper.right .v-popper__arrow, .v-tooltip .v-popper.right-start .v-popper__arrow, .v-tooltip .v-popper.right-end .v-popper__arrow {
+      border-top: 6px solid transparent;
+      border-bottom: 6px solid transparent;
+      border-right: 6px solid rgba(70, 76, 91, 0.9);
+      border-left: none; }
+  .v-tooltip .v-popper.right .v-popper__arrow {
+    left: 0;
+    top: 50%;
+    margin-top: -6px; }
+  .v-tooltip .v-popper.right-start .v-popper__arrow {
+    left: 0;
+    top: 6px; }
+  .v-tooltip .v-popper.right-end .v-popper__arrow {
+    left: 0;
+    bottom: 6px; }
