--- a/examples/assets/css/index.css
+++ b/examples/assets/css/index.css
@@ -2032,9 +2032,9 @@
     position: absoulute; } }
 @font-face {
   font-family: "vantd";
-  src: url("http://at.alicdn.com/t/font_qgubpqa0602dfgvi.eot?t=1494825614962");
+  src: url(/assets/fonts/iconfont.eot);
   /* IE9*/
-  src: url("http://at.alicdn.com/t/font_qgubpqa0602dfgvi.eot?t=1494825614962#iefix") format("embedded-opentype"), url("http://at.alicdn.com/t/font_qgubpqa0602dfgvi.woff?t=1494825614962") format("woff"), url("http://at.alicdn.com/t/font_qgubpqa0602dfgvi.ttf?t=1494825614962") format("truetype"), url("http://at.alicdn.com/t/font_qgubpqa0602dfgvi.svg?t=1494825614962#vantd") format("svg");
+  src: url(/assets/fonts/iconfont.eot#iefix) format("embedded-opentype"), url(/assets/fonts/iconfont.woff) format("woff"), url(/assets/fonts/iconfont.ttf) format("truetype"), url(/assets/images/iconfont.svg#vantd) format("svg");
   /* iOS 4.1- */ }
 
 .v-icon {
@@ -2642,13 +2642,13 @@
   position: relative;
   z-index: 1000; }
   .v-popper.bottom, .v-popper.bottom-start, .v-popper.bottom-end {
-    margin-top: 5px; }
+    padding-top: 5px; }
   .v-popper.top, .v-popper.top-start, .v-popper.top-end {
-    margin-bottom: 5px; }
+    padding-bottom: 5px; }
   .v-popper.left, .v-popper.left-start, .v-popper.left-end {
-    margin-right: 5px; }
+    padding-right: 5px; }
   .v-popper.right, .v-popper.right-start, .v-popper.right-end {
-    margin-left: 5px; }
+    padding-left: 5px; }
   .v-popper.has-arrow .v-popper__arrow {
     position: absolute;
     display: block;
@@ -3584,3 +3584,134 @@
   .v-tooltip .v-popper.right-end .v-popper__arrow {
     left: 0;
     bottom: 6px; }
+.v-menu {
+  padding: 0;
+  margin: 0;
+  font-family: "Segoe UI", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "SimSun", sans-serif;
+  font-size: 12px;
+  list-style: none; }
+  .v-menu__light {
+    background-color: #FFF; }
+  .v-menu ul {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+
+.v-menu-item {
+  padding-left: 24px;
+  padding-right: 24px;
+  line-height: 42px;
+  position: relative;
+  cursor: pointer; }
+  .v-menu-item:hover {
+    color: #49a9ee; }
+
+.v-submenu__title {
+  position: relative;
+  padding-left: 24px;
+  padding-right: 24px;
+  line-height: 42px;
+  cursor: pointer; }
+  .v-submenu__title:hover {
+    color: #49a9ee; }
+  .v-submenu__title:after {
+    position: absolute;
+    right: 24px;
+    top: 0;
+    display: inline-block;
+    font-family: "vantd";
+    font-size: 10px;
+    content: "\EE29";
+    transition: all .3s; }
+
+.v-submenu__content {
+  max-height: 0;
+  overflow: hidden;
+  transition: all .3s; }
+  .v-submenu__content .v-menu-item {
+    padding-left: 48px; }
+
+.v-submenu.open .v-submenu__title:after {
+  position: absolute;
+  right: 24px;
+  top: 0;
+  display: inline-block;
+  font-family: "vantd";
+  content: "\EE29";
+  transform: rotate(180deg); }
+
+.v-submenu.open .v-submenu__content {
+  max-height: 420px; }
+
+.v-menu-vertical .v-menu-item:after {
+  position: absolute;
+  right: 0;
+  content: " ";
+  display: inline-block;
+  width: 2px;
+  height: 42px;
+  background-color: #49a9ee;
+  transform: scaleY(0);
+  transition: all .1s; }
+
+.v-menu-vertical .v-menu-item.selected {
+  background-color: #ecf6fd;
+  color: #49a9ee; }
+  .v-menu-vertical .v-menu-item.selected:after {
+    transform: scaleY(1); }
+
+.v-menu-horizontal .v-menu-item {
+  display: inline-block; }
+  .v-menu-horizontal .v-menu-item:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: " ";
+    display: inline-block;
+    height: 2px;
+    width: 100%;
+    background-color: #49a9ee;
+    transform: scaleX(0);
+    transition: all .1s; }
+  .v-menu-horizontal .v-menu-item.selected {
+    color: #49a9ee; }
+    .v-menu-horizontal .v-menu-item.selected:after {
+      transform: scaleX(1); }
+
+.v-menu-horizontal .v-submenu {
+  position: relative;
+  display: inline-block; }
+  .v-menu-horizontal .v-submenu:after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: " ";
+    display: inline-block;
+    height: 2px;
+    width: 100%;
+    background-color: #49a9ee;
+    transform: scaleX(0);
+    transition: all .1s; }
+  .v-menu-horizontal .v-submenu.selected {
+    color: #49a9ee; }
+    .v-menu-horizontal .v-submenu.selected:after {
+      transform: scaleX(1); }
+  .v-menu-horizontal .v-submenu .v-submenu__title {
+    display: inline-block; }
+    .v-menu-horizontal .v-submenu .v-submenu__title::after {
+      right: 4px; }
+  .v-menu-horizontal .v-submenu .v-submenu__content {
+    max-height: none;
+    background-color: #FFF;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 4px; }
+    .v-menu-horizontal .v-submenu .v-submenu__content .v-menu-item {
+      display: block;
+      min-width: 160px;
+      padding-left: 16px;
+      padding-right: 16px; }
+      .v-menu-horizontal .v-submenu .v-submenu__content .v-menu-item:after {
+        display: none; }
+      .v-menu-horizontal .v-submenu .v-submenu__content .v-menu-item.selected {
+        background-color: #ecf6fd; }
