--- a/src/components/style/icon/index.scss
+++ b/src/components/style/icon/index.scss
@@ -1,7 +1,7 @@
 @import "../themes/default";
 @import "../common/index";
 
-$icon-url:     './fonts/iconfont';
+$icon-url:     '../fonts/iconfont';
 
 @font-face {
   font-family: "vantd";
