--- a/src/styles/menu/_core.scss
+++ b/src/styles/menu/_core.scss
@@ -4,9 +4,6 @@
   font-family: $font-family;
   font-size: $font-size-base;
   list-style: none;
-  &__light {
-    background-color: #FFF;
-  }
   ul {
     padding: 0;
     margin: 0;
@@ -19,6 +16,10 @@
   padding-right: 24px;
   line-height: 42px;
   position: relative;
+
+  .#{$ui-prefix}-popper{
+    line-height: 1.5;
+  }
   &:hover {
     color: $blue-light;
   }
@@ -32,6 +33,11 @@
     padding-right: 24px;
     line-height: 42px;
     cursor: pointer;
+
+    .#{$ui-prefix}-popper{
+      line-height: 1.5;
+    }
+
     &:hover {
       color: $blue-light;
     }
@@ -230,6 +236,35 @@
         &:after{
           display: none;
         }
+      }
+    }
+  }
+}
+
+.#{$ui-prefix}-menu__light{
+  background-color: #FFF;
+}
+
+
+.#{$ui-prefix}-menu__dark{
+  background-color: #404040;
+  color: #EEE;
+
+  .#{$ui-prefix}-menu-item{
+    &::after{
+      display: none;
+    }
+
+    &.selected{
+      background-color: $blue-light;
+      color: #FFF;
+    }
+  }
+
+  .#{$ui-prefix}-submenu{
+    &.open{
+      .#{$ui-prefix}-submenu__content{
+        background-color: #333;
       }
     }
   }
