--- a/src/styles/menu/_core.scss
+++ b/src/styles/menu/_core.scss
@@ -61,6 +61,7 @@
     }
   }
   &.open {
+    background-color: rgba(#ecf6fd, .3);
     .#{$ui-prefix}-submenu__title {
       &:after {
         position: absolute;
