--- a/src/styles/grid/_core.scss
+++ b/src/styles/grid/_core.scss
@@ -4,6 +4,9 @@
   @include make-row;
   display: block;
   box-sizing: border-box;
+  *{
+    box-sizing: border-box;
+  }
 }
 
 .#{$ui-prefix}-row-flex {
