--- a/src/styles/menu/_core.scss
+++ b/src/styles/menu/_core.scss
@@ -289,6 +289,10 @@
       padding-left: 0;
       padding-right: 0;
       text-align: center;
+
+      &::after{
+        display: none;
+      }
     }
   }
 }
